personal-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
  namespace: personal-website
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: personal-website
          image: matthew10125/personal-website:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
