personal-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
  namespace: personal-website
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
